@@ -2,6 +2,7 @@ Revision history for Perl module Deep::Hash::Utils
 
 0.03 2014-03-??
     - Fixed abstract to follow the CPAN convention
+    - Added github repo to metadata and doc
 
 0.02 2012-07-06
 
